[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
durations = {path = "../durations"}
egui = "0.16.0"
emath = "0.16.0"
eframe = { version = "*", default-features = false, features = ["default_fonts", "egui_glium"] }
thousands = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.0"